ENH/jhr: dynamicaly guess remote lvm management host

--- a/src/datastore_mad/remotes/lvm/lvm.conf
+++ b/src/datastore_mad/remotes/lvm/lvm.conf
@@ -18,7 +18,7 @@
 VG_NAME=vg-one
 
 # Default LVM server host
-HOST=localhost
+HOST=$(onehost list -l NAME,STAT | grep 'on$' | head -n 1 | awk '{print $1}')
 
 # Default LV snapshot SIZE
 DEFAULT_SIZE=512
