ENH/jhr: preconfigure vnc_proxy_path for susnstone

--- a/src/sunstone/etc/sunstone-server.conf
+++ b/src/sunstone/etc/sunstone-server.conf
@@ -85,7 +85,7 @@
 :vnc_proxy_support_wss: no
 :vnc_proxy_cert:
 :vnc_proxy_key:
-
+:vnc_proxy_path: /usr/share/one/websockify/websocketproxy.py
 
 # Default language setting
 :lang: en_US
