ENH/jhr: when onehost has state "update" try to get lvm mgmt host again

--- a/src/datastore_mad/remotes/lvm/lvm.conf
+++ b/src/datastore_mad/remotes/lvm/lvm.conf
@@ -18,7 +18,23 @@
 VG_NAME=vg-one
 
 # Default LVM server host
-HOST=$(onehost list -l NAME,STAT | grep 'on$' | head -n 1 | awk '{print $1}')
+#HOST=$(onehost list -l NAME,STAT | grep 'on$' | head -n 1 | awk '{print $1}')
+HOST=$(
+        ip=$(onehost list -l NAME,STAT | grep 'on$' | head -n 1 | awk '{print $1}')
+
+        if [ -z "$ip" ]
+        then
+
+                # when onehost has state "update" try to get lvm mgmt host again
+                if onehost list | grep -q update
+                then
+                        sleep 10
+                        ip=$(onehost list -l NAME,STAT | grep 'on$' | head -n 1 | awk '{print $1}')
+                fi
+        fi
+
+        echo "$ip"
+)
 
 # Default LV snapshot SIZE
 DEFAULT_SIZE=512
